# $Id$

2009-03-27	Ivan Y. Khvostishkov

	* main/EntityProto/Builders/DirectoryToObjectBinder.class.php,
	main/EntityProto/Builders/ObjectToDirectoryBinder.class.php: simple
	directory service helpers based on a local filesystem. Can be used for
	easy object configuration management, just like an LDAP.

2009-03-27	Sergey S. Sergeev

	* main/UnifiedContainer/UnifiedContainerWorker.class.php: drop limit and
	offset in count query fixed.

2009-03-26	Denis M. Gabaidulin

	* core/DB/MySql dialects classes: quote integers values too.

2009-03-26	Vladlen Y. Koshelev

	* core/Base/Singleton.class.php: instantiation of classes with two or more
	constructor arguments fixed, related tests added.

2009-03-25	Denis M. Gabaidulin

	* core/Form/Primitives/PrimitiveNoValue.class.php. Special primitive
	w/o value.

	* main/Utils/CommandLine/ArgumentParser.class.php. Refactor. Drop special
	collection and use only native form.

2009-03-24	Denis M. Gabaidulin

	* main/Utils/ArrayUtils.class.php: isEmpty(). Check for assoc
	single dimension array.

2009-03-23	Denis M. Gabaidulin

	* main/Utils/CommandLine/ArgumentBuilder.class.php. Simple builder to hide
	complex interface.

	* main/Utils/CommandLine/Argument.class.php. Primitive member added.

2009-03-22	Sergey S. Sergeev

	* core/Form/Primitives/PrimitiveImage.class.php: getMaxWidth(),
	getMinWidth(), getMaxHeight(), getMinHeight() added.

	* core/Logic/BinaryExpression.class.php: getLeft(), getRight(),
	getLogic() added.

	* core/OSQL/SQLChain.class.php: getChain(), getLogic() added.

2009-03-19	Denis M. Gabaidulin

	* main/Base/Collection.class.php. Useful accessors added.

	* main/Utils/CommandLine/*.class.php. Simple command line args parser
	based on getopt().

2009-03-17	Denis M. Gabaidulin

	* main/Flow/HttpRequest.class.php: setServerVar() added.

	* main/Utils/DateUtils.class.php: alignToSeconds() added.
	Function used to align date for any interval.

2009-03-16	Denis M. Gabaidulin
