@@ -1,5 +1,10 @@
 # $Id$
 
+2009-03-28	Evgeniy N. Sokolov
+
+	* core/Form/Form.class.php: getWrongLabel() and getMissingLabel()
+	added.
+
 2009-03-27	Ivan Y. Khvostishkov
 
 	* main/EntityProto/Builders/DirectoryToObjectBinder.class.php,
